<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Open Weather Map API Client</string>
    <string name="location_hint">Location (e.g. 55426; St Louis Park, MN)</string>
    <string name="done">Done</string>
    <string name="weather_empty_text">No Weather Yet!</string>
    <string name="temp_now">Right Now:</string>
    <string name="temp_high">High:</string>
    <string name="temp_low">Low:</string>
    <string name="loading">Loading</string>
    <string name="loading_weather_fmt">Loading weather for %s</string>
</resources>
