<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/done"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:autoText="false"
        android:hint="@string/location_hint" />
    <Button
        android:id="@+id/done" 
        android:layout_width="96dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/done" />
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/location"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/temp_now"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/textViewTempNow"
                android:text=""></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/temp_high"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/textViewTempHigh"
                android:text=""></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/temp_low"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/textViewTempLow"
                android:text=""></TextView>
        </TableRow>
    </TableLayout>

</RelativeLayout>

